[gd_scene load_steps=8 format=3 uid="uid://bkdad5m7gw3rv"]

[ext_resource type="Script" path="res://scenes/enemy.gd" id="1_37c3y"]
[ext_resource type="SpriteFrames" uid="uid://3c8lff1hc1n3" path="res://resources/enemy.tres" id="2_8fy1c"]
[ext_resource type="PackedScene" uid="uid://ddoq2dtf3va6t" path="res://scenes/health.tscn" id="3_pm3a4"]
[ext_resource type="PackedScene" uid="uid://caqd5s3s14xub" path="res://scenes/walk_animation.tscn" id="3_q16vu"]
[ext_resource type="Texture2D" uid="uid://tr6a5lcdoprk" path="res://images/fire_particle.png" id="4_nfq3b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_iqwvn"]
radius = 15.0333

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vyhy4"]
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 180.0
gravity = Vector3(0, 98, 0)
initial_velocity_min = -50.0
initial_velocity_max = 50.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 4.0
scale_max = 4.0

[node name="Enemy" type="Area2D" groups=["enemies"]]
collision_mask = 7
script = ExtResource("1_37c3y")

[node name="WalkAnimation" parent="." instance=ExtResource("3_q16vu")]
sprite_frames = ExtResource("2_8fy1c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_iqwvn")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_max_distance = 1000.0
avoidance_enabled = true
radius = 16.0

[node name="Health" parent="." instance=ExtResource("3_pm3a4")]
position = Vector2(-16, -32)
width = 32
height = 16

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
z_index = 1
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_vyhy4")
texture = ExtResource("4_nfq3b")
explosiveness = 1.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="dead" from="Health" to="." method="_on_health_dead"]
